Changed about content and fixed spacing.

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -76,6 +76,8 @@ li {
 }
 
 .bar {
+    position: relative;
+    right: 15px;
     height: 5px;
     width: 30px;
     margin: 2px 0;
